<resources>
    <string name="app_name">MyCarApp</string>
    <string name="brand">Brand:</string>
    <string name="car_details">Car Details</string>
    <string name="model">Model:</string>
    <string name="name">Name:</string>
    <string name="number_of_cylinders">Number of cylinders:</string>
    <string name="price">Price:</string>
    <string name="returnLbl">Return</string>
    <string name="car_image_description">Car Image</string>
    <string name="detalles">Detalles</string>
    <string name="sucursales">Sucursales</string>
    <string name="branch_offices">Branch Offices</string>
</resources>